# viren2d

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  TODO.md  dev.md  pyproject.toml  rundev.sh  setup.py
.github/workflows/: tests.yaml
cmake/: Config.cmake.in  FindCairo.cmake  cmake_uninstall.cmake.in  cmake_utils.cmake  setup_dependencies.cmake
docs/: requirements.txt
docs/source/: api-documentation.rst  conf.py  dev-guide.rst  examples-painter.rst  examples-pseudocolor.rst  index.rst  installation.rst  python.rst  quickstart.rst  symbols.rst  tutorial-painter.rst  viren2d_python.rst
docs/source/_static/: dark.css
docs/source/apidoc/: apidoc-basic-shapes.rst  apidoc-basic-types.rst  apidoc-color.rst  apidoc-colorgradients.rst  apidoc-colormaps.rst  apidoc-drawing.rst  apidoc-imagebuffer.rst  apidoc-optical-flow.rst  apidoc-positioning.rst  apidoc-style-enums.rst  apidoc-styles.rst  apidoc-vectors.rst
docs/source/code-snippets/python/: painter-usage.py
docs/source/tutorial/: _example_cap.rst  _example_join.rst  _example_markers.rst  basics.rst  colorization-colorize.rst  colorization-colormaps.rst  colorization-label-colorization.rst  colorization-optical-flow.rst  colorization-relief-shading.rst  colorization-scaled-colorization.rst  colorization.rst  colormaps.rst  conversion.rst  draw-3d-calibration.rst  draw-3d-results.rst  draw-color-styles.rst  draw-image.rst  draw-markers.rst  draw-poses.rst  draw-primitives.rst  draw-surveillance.rst  draw-text.rst  draw-tracking-by-detection.rst  draw.rst  optical-flow.rst  pseudocolor.rst
docs/source/tutorial/code-snippets/: painter-retrieve.cpp  painter-retrieve.py  painter-setup.cpp  painter-setup.py
examples/: README.md  demo.py  demo2d.cpp  render_rtd_images.py  rtd_hello_world.py  runtimes.py
examples/cmake-fetch/: CMakeLists.txt  hello_world.cpp
examples/data/: sintel-alley2.flo
examples/demo-cpp/: CMakeLists.txt  demo_main.cpp
examples/demo-cpp/demo_utils/: demos.h  demos_color.cpp  demos_colorization.cpp  demos_imagebuffer.cpp  demos_lines.cpp  demos_pinhole.cpp  demos_shapes.cpp  demos_text.cpp  demos_tracking_by_detection.cpp
examples/external-fetch/: CMakeLists.txt
examples/hello-world-cpp/: CMakeLists.txt  hello_world.cpp
examples/hello-world-python/: hello_world.py
examples/painters/: __init__.py
examples/rtd-examples-python/: render_rtd_images.py  runtimes.py
examples/rtd-examples-python/docstr-snippets/: scaled-colorization.inc
examples/rtd-examples-python/rtd_demo_images/: __init__.py  cheat_sheets.py  color_gradients.py  color_names.py  colormaps.py  constants.py  images.py  line_styles.py  markers.py  optical_flow.py  pinhole.py  positioning.py  primitives.py  text.py  tracking_by_detection.py
examples/rtd_demo_images/: __init__.py  cheat_sheets.py  color_names.py  line_styles.py  markers.py  positioning.py  primitives.py  tracking_by_detection.py
examples/visualization-python/: demo.py  setup.py
examples/visualization-python/cvvis2d/: __init__.py  image_overlay.py  text_overlay.py
examples/visualization-python/visualizers/: __init__.py  detections.py  pipeline.py  text_overlay.py
include/viren2d/: collage.h  colorgradients.h  colormaps.h  colors.h  colors.hpp  drawing.h  drawing.hpp  imagebuffer.h  logging.h  math.h  math.hpp  opticalflow.h  positioning.h  primitives.h  primitives.hpp  string_utils.h  string_utils.hpp  styles.h  viren2d.h  viren2d.hpp
include/vivi/: colors.hpp  drawing.hpp  math.hpp  primitives.hpp  string_utils.hpp  vivi.hpp
src/: bindings.cpp  collage.cpp  colorgradients.cpp  colormaps.cpp  colors.cpp  drawing.cpp  flow.cpp  imagebuffer.cpp  opticalflow.cpp  positioning.cpp  primitives.cpp  styles.cpp  version.h.in
src/bindings/: binding_helpers.h  bindings_code_examples.cpp  bindings_collage.cpp  bindings_colorgradients.cpp  bindings_colormaps.cpp  bindings_colors.cpp  bindings_common.cpp  bindings_imagebuffer.cpp  bindings_opticalflow.cpp  bindings_painter.cpp  bindings_primitives.cpp  bindings_styles.cpp  bindings_text.cpp  bindings_vector.cpp
src/bindings/docstr-snippets/: colorization-categorical.inc  colorization-custom.inc  colorization-scalars.inc  colorization-scaled.inc  relief-shading.inc
src/bindings/werkzeugkiste-bindings/: line2d.h  vector.h
src/drawing_helpers/: drawing_helpers_primitives.cpp
src/helpers/: color_conversion.h  colormaps_helpers.cpp  colormaps_helpers.h  drawing_helpers.h  drawing_helpers_detection_tracking.cpp  drawing_helpers_image.cpp  drawing_helpers_pinhole.cpp  drawing_helpers_primitives.cpp  drawing_helpers_surveillance.cpp  drawing_helpers_text.cpp  enum.h  imagebuffer_helpers.impl.h  logging.cpp  logging.h  math.h  math_utils.h
src/viren2d/: bindings.cpp  colors.cpp  drawing.cpp  drawing_helpers.hpp  drawing_helpers_primitives.cpp
src/vivi/: bindings.cpp  colors.cpp  drawing.cpp  drawing_helpers.hpp  drawing_helpers_primitives.cpp  primitives.cpp
tests/: color_test.cpp  colormaps_test.cpp  imagebuffer_test.cpp  primitives_test.cpp  rectangle_test.cpp  style_test.cpp  test_colormaps.py  test_colors.py  test_docstr_examples.py  test_imagebuffer.py  test_opticalflow.py  test_painter.py  test_primitives.py  test_styles.py  test_vector.py  utils_test.cpp  vector_test.cpp
